k8s/coma/apps/trillium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trillium
  namespace: trilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default/https-redirect@kubernetescrd,default/hsts@kubernetescrd
spec:
  rules:
    - host: "trilium.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: trilium
                port:
                  number: 8080
  tls:
    - hosts:
        - "trilium.artichoke.cc"
      secretName: artichokecc-cert
